TestSuite/PascalABCTests/errors/err0005.pas
var a : integer;
begin
a := a+'as';
end.